feat: add overview section with cards for balance, savings, expenses, and income

--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../static/css/style.css" />
   <link rel="stylesheet" href="../static/css/sidebar.css" />
   <link rel="stylesheet" href="../static/css/header.css" />
+  <link rel="stylesheet" href="../static/css/overview.css" />
 </head>
 
 <body>
@@ -83,6 +84,114 @@
           </div>
         </div>
       </header>
+
+
+      <!-- Dashboard Grid -->
+      <div class="dashboard-grid">
+
+        <!-- Left Column -->
+        <section class="left-column">
+          <!-- Overview Section -->
+          <div class="section-header">
+            <h2 class="section-title">Overview</h2>
+          </div>
+
+          <!-- Overview Cards -->
+          <div class="overview-cards">
+            <!-- Balance Card -->
+            <div class="card balance-card">
+              <div class="card-header">
+                <img src="../static/images/balance-icon.png" />
+                <div>
+                  <h3 class="overview-view-title">Your Balance</h3>
+                  <div class="card-right-bottom">
+                    <img src="../static/images/balance-arrow.png" />
+                    <span class="desc">15 % compared with last month</span>
+                  </div>
+                </div>
+              </div>
+              <div class="divider"></div>
+              <div class="card-footer">
+                <span class="amount">$28,891.138</span>
+                <div class="arrow-link link">
+                  <i class="fas fa-arrow-right"></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- Saving Card -->
+            <div class="card">
+              <div class="card-header">
+                <img src="../static/images/saving-icon.png" />
+                <div>
+                  <h3 class="saving-title">Saving</h3>
+                  <div class="card-right-bottom">
+                    <img src="../static/images/saving-arrow.png" />
+                    <span class="desc">10 % compared with last month</span>
+                  </div>
+                </div>
+              </div>
+              <div class="divider"></div>
+              <div class="card-footer">
+                <span class="amount">$1,050.44</span>
+                <div class="dark-arrow link">
+                  <i class="fas fa-arrow-right"></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- Expenses Card -->
+            <div class="card">
+              <div class="card-header">
+                <img src="../static/images/expense-icon.png" />
+                <div>
+                  <h3 class="saving-title">Expenses</h3>
+                  <div class="card-right-bottom">
+                    <img src="../static/images/expense-arrow.png" />
+                    <span class="desc">2 % compared with last month</span>
+                  </div>
+                </div>
+              </div>
+              <div class="divider"></div>
+              <div class="card-footer">
+                <span class="amount">$200.31</span>
+                <div class="dark-arrow link">
+                  <i class="fas fa-arrow-right"></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- Incomes Card -->
+            <div class="card">
+              <div class="card-header">
+                <img src="../static/images/income-icon.png" />
+                <div>
+                  <h3 class="saving-title">Income</h3>
+                  <div class="card-right-bottom">
+                    <img src="../static/images/income-arrow.png" />
+                    <span class="desc">8 % compared with last month</span>
+                  </div>
+                </div>
+              </div>
+              <div class="divider"></div>
+              <div class="card-footer">
+                <span class="amount">$21,121.0</span>
+                <div class="dark-arrow link">
+                  <i class="fas fa-arrow-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </section>
+
+
+
+
+      </div>
+    </div>
+
 
     </div>
   </main>
