feat: enhance layout and styles for left and right sections, add saving plan and recent transactions

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -93,9 +93,9 @@
 }
 
 .nav-divider {
-  height: 1px;
-  background-color: #f0f0f0;
   margin: 15px 0;
+  background-color: #e2e1e1;
+  height: 1px;
 }
 
 @media (max-width: 1023px) {
