--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../static/css/header.css" />
   <link rel="stylesheet" href="../static/css/overview.css" />
   <link rel="stylesheet" href="../static/css/analytics.css" />
-   <link rel="stylesheet" href="../static/css/right-section.css" />
+  <link rel="stylesheet" href="../static/css/right-section.css" />
 </head>
 
 <body>
@@ -89,105 +89,105 @@
 
       <!-- Dashboard Grid -->
       <div class="dashboard-grid">
-         <div>
-        <!-- Left Column -->
-        <section class="left-column">
-          <!-- Overview Section -->
-          <div class="section-header">
-            <h2 class="section-title">Overview</h2>
-          </div>
+         <!-- Left Column -->
+        <div class="left-wrapper">
+          <section class="left-column">
+            <!-- Overview Section -->
+            <div class="section-header">
+              <h2 class="section-title">Overview</h2>
+            </div>
 
-          <!-- Overview Cards -->
-          <div class="overview-cards">
-            <!-- Balance Card -->
-            <div class="card balance-card">
-              <div class="card-header">
-                <img src="../static/images/balance-icon.png" />
-                <div>
-                  <h3 class="overview-view-title">Your Balance</h3>
-                  <div class="card-right-bottom">
-                    <img src="../static/images/balance-arrow.png" />
-                    <span class="desc">15 % compared with last month</span>
+            <!-- Overview Cards -->
+            <div class="overview-cards">
+              <!-- Balance Card -->
+              <div class="card balance-card">
+                <div class="card-header">
+                  <img src="../static/images/balance-icon.png" />
+                  <div>
+                    <h3 class="overview-view-title">Your Balance</h3>
+                    <div class="card-right-bottom">
+                      <img src="../static/images/balance-arrow.png" />
+                      <span class="desc">15 % compared with last month</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="divider"></div>
+                <div class="card-footer">
+                  <span class="amount">$28,891.138</span>
+                  <div class="arrow-link link">
+                    <i class="fas fa-arrow-right"></i>
                   </div>
                 </div>
               </div>
-              <div class="divider"></div>
-              <div class="card-footer">
-                <span class="amount">$28,891.138</span>
-                <div class="arrow-link link">
-                  <i class="fas fa-arrow-right"></i>
+
+              <!-- Saving Card -->
+              <div class="card">
+                <div class="card-header">
+                  <img src="../static/images/saving-icon.png" />
+                  <div>
+                    <h3 class="saving-title">Saving</h3>
+                    <div class="card-right-bottom">
+                      <img src="../static/images/saving-arrow.png" />
+                      <span class="desc">10 % compared with last month</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="divider"></div>
+                <div class="card-footer">
+                  <span class="amount">$1,050.44</span>
+                  <div class="dark-arrow link">
+                    <i class="fas fa-arrow-right"></i>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Expenses Card -->
+              <div class="card">
+                <div class="card-header">
+                  <img src="../static/images/expense-icon.png" />
+                  <div>
+                    <h3 class="saving-title">Expenses</h3>
+                    <div class="card-right-bottom">
+                      <img src="../static/images/expense-arrow.png" />
+                      <span class="desc">2 % compared with last month</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="divider"></div>
+                <div class="card-footer">
+                  <span class="amount">$200.31</span>
+                  <div class="dark-arrow link">
+                    <i class="fas fa-arrow-right"></i>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Incomes Card -->
+              <div class="card">
+                <div class="card-header">
+                  <img src="../static/images/income-icon.png" />
+                  <div>
+                    <h3 class="saving-title">Income</h3>
+                    <div class="card-right-bottom">
+                      <img src="../static/images/income-arrow.png" />
+                      <span class="desc">8 % compared with last month</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="divider"></div>
+                <div class="card-footer">
+                  <span class="amount">$21,121.0</span>
+                  <div class="dark-arrow link">
+                    <i class="fas fa-arrow-right"></i>
+                  </div>
                 </div>
               </div>
             </div>
 
-            <!-- Saving Card -->
-            <div class="card">
-              <div class="card-header">
-                <img src="../static/images/saving-icon.png" />
-                <div>
-                  <h3 class="saving-title">Saving</h3>
-                  <div class="card-right-bottom">
-                    <img src="../static/images/saving-arrow.png" />
-                    <span class="desc">10 % compared with last month</span>
-                  </div>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="card-footer">
-                <span class="amount">$1,050.44</span>
-                <div class="dark-arrow link">
-                  <i class="fas fa-arrow-right"></i>
-                </div>
-              </div>
-            </div>
 
-            <!-- Expenses Card -->
-            <div class="card">
-              <div class="card-header">
-                <img src="../static/images/expense-icon.png" />
-                <div>
-                  <h3 class="saving-title">Expenses</h3>
-                  <div class="card-right-bottom">
-                    <img src="../static/images/expense-arrow.png" />
-                    <span class="desc">2 % compared with last month</span>
-                  </div>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="card-footer">
-                <span class="amount">$200.31</span>
-                <div class="dark-arrow link">
-                  <i class="fas fa-arrow-right"></i>
-                </div>
-              </div>
-            </div>
+          </section>
 
-            <!-- Incomes Card -->
-            <div class="card">
-              <div class="card-header">
-                <img src="../static/images/income-icon.png" />
-                <div>
-                  <h3 class="saving-title">Income</h3>
-                  <div class="card-right-bottom">
-                    <img src="../static/images/income-arrow.png" />
-                    <span class="desc">8 % compared with last month</span>
-                  </div>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="card-footer">
-                <span class="amount">$21,121.0</span>
-                <div class="dark-arrow link">
-                  <i class="fas fa-arrow-right"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-        </section>
-
-         <!-- Analytics Section -->
+          <!-- Analytics Section -->
           <section class="analytics-section">
             <div class="analytics-header">
               <div class="section-title">Analytics</div>
@@ -246,8 +246,156 @@
               </div>
             </div>
           </section>
+        </div>
+
+
+        <!-- Right Column -->
+        <div class="right-column">
+          <!-- Saving Plan Section -->
+          <div class="container">
+            <div class="section-header">
+              <h2 class="section-title">Saving Plan</h2>
+              <a href="#" class="see-all">See All</a>
+            </div>
+
+            <div class="divider2"></div>
+            <!-- Bali Vacation Plan -->
+            <div class="plan-item">
+              <div class="plan-header">
+                <div class="plan-title">Bali Vacation</div>
+                <div class="plan-target">Target: August 25 2022</div>
+              </div>
+              <div class="wrapper">
+                <div class="plan-amount">
+                  <div class="amount-value">$1950.21</div>
+                  <div class="total-value">/$ 4000</div>
+                </div>
+                <span class="plan-percentage1">48%</span>
+              </div>
+              <div class="progress-bar">
+                <div class="progress blue-progress" style="width: 48%;"></div>
+              </div>
+            </div>
+
+            <!-- New Gadget Plan -->
+            <div class="plan-item">
+              <div class="plan-header">
+                <div class="plan-title">New Gadget</div>
+                <div class="plan-target">Target: August 25 2022</div>
+              </div>
+              <div class="wrapper">
+                <div class="plan-amount">
+                  <div class="amount-value">$790.21</div>
+                  <div class="total-value">/$ 1000</div>
+                </div>
+                <span class="plan-percentage2">79%</span>
+              </div>
+              <div class="progress-bar">
+                <div class="progress yellow-progress" style="width: 79%;"></div>
+              </div>
+
+            </div>
+
+            <!-- Charity Plan -->
+            <div class="plan-item">
+              <div class="plan-header">
+                <div class="plan-title">Charity</div>
+                <div class="plan-target">Target: August 25 2022</div>
+              </div>
+              <div class="wrapper">
+                <div class="plan-amount">
+                  <div class="amount-value">$32.11</div>
+                  <div class="total-value">/$ 100</div>
+                </div>
+                <span class="plan-percentage3">32%</span>
+              </div>
+              <div class="progress-bar">
+                <div class="progress green-progress" style="width: 32%;"></div>
+              </div>
+            </div>
           </div>
-       
+
+          <!-- Recent Transactions Section -->
+          <div class="recent-transactions">
+            <div class="section-header">
+              <h2 class="section-title">Recent Transaction</h2>
+              <a href="#" class="see-all">See All</a>
+            </div>
+
+            <div class="divider2"></div>
+
+            <!-- Figma Transaction -->
+            <div class="transaction-item">
+              <div class="transaction-info">
+                <div class="transaction-icon">
+                  <i class="fas fa-image"></i>
+                </div>
+                <div class="transaction-details">
+                  <div class="transaction-name">Figma</div>
+                  <div class="transaction-date">August 25, 2022</div>
+                </div>
+              </div>
+              <div class="transaction-amount">
+                <div class="amount-text">$50.00</div>
+                <div class="status">Completed</div>
+              </div>
+              <div class=""></div>
+            </div>
+
+            <!-- Spotify Transaction -->
+            <div class="transaction-item">
+              <div class="transaction-info">
+                <div class="transaction-icon">
+                  <i class="fas fa-music"></i>
+                </div>
+                <div class="transaction-details">
+                  <div class="transaction-name">Youtube</div>
+                  <div class="transaction-date">August 24, 2022</div>
+                </div>
+              </div>
+              <div class="transaction-amount">
+                <div class="amount-text">$9.99</div>
+                <div class="status">Completed</div>
+              </div>
+            </div>
+
+            <!-- Amazon Transaction -->
+            <div class="transaction-item">
+              <div class="transaction-info">
+                <div class="transaction-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </div>
+                <div class="transaction-details">
+                  <div class="transaction-name">Spotify</div>
+                  <div class="transaction-date">August 23, 2022</div>
+                </div>
+              </div>
+              <div class="transaction-amount">
+                <div class="amount-text">$120.00</div>
+                <div class="status">Pending</div>
+              </div>
+            </div>
+
+            <!-- Netflix Transaction -->
+            <div class="transaction-item">
+              <div class="transaction-info">
+                <div class="transaction-icon">
+                  <i class="fas fa-video"></i>
+                </div>
+                <div class="transaction-details">
+                  <div class="transaction-name">Netflix</div>
+                  <div class="transaction-date">August 22, 2022</div>
+                </div>
+              </div>
+              <div class="transaction-amount">
+                <div class="amount-text">$15.99</div>
+                <div class="status">Completed</div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
       </div>
     </div>
     </div>
@@ -255,4 +403,5 @@
 
   <script src="../static/js/index.js"></script>
 </body>
+
 </html>
