--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -1,4 +1,11 @@
 /* ANALYTICS SECTION */
+.left-wrapper{
+    height: fit-content;
+ background-color: white;
+  padding: 15px 20px 0px 20px;
+  border-radius: 20px;
+}
+
 .analytics-section {
   background-color: white;
   border-radius: 15px;
