--- a/static/css/right-section.css
+++ b/static/css/right-section.css
@@ -86,6 +86,16 @@
 .progress {
   height: 100%;
   border-radius: 5px;
+  animation: growWidth 1.2s ease-in-out forwards;
+}
+
+@keyframes growWidth {
+  from {
+    width: 0%;
+  }
+  to {
+    width: var(--target-width);
+  }
 }
 
 .blue-progress {
